# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-sbx"
description = "Plugin to customize WGU Open edX sandbox tutor installation."
authors = [
  { name = "Taylor Payne"},
  { email = "taylor.payne2@wgu.edu" },
]
license = { text = "MIT" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor",
]

# These fields will be set by hatch_build.py
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tutor[dev]",
    "ruff",
]

[tool.hatch.version]
path = "tutor_sbx/__about__.py"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/WGU-Open-edX/tutor-contrib-sbx#readme"
Issues = "https://github.com/WGU-Open-edX/tutor-contrib-sbx/issues"
Source = "https://github.com/WGU-Open-edX/tutor-contrib-sbx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tutor_sbx"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutor_sbx"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
sbx = "tutor_sbx.plugin"
